tests/syntax_error/string_zero_byte.jou
"foo\0bar"   # Error: strings cannot contain zero bytes (\0), because that is the special end marker byte
